--- a/BeerOverflowWindowsApp/MapControl.xaml
+++ b/BeerOverflowWindowsApp/MapControl.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-       xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="BeerOverflowWindowsApp.MapControl"
+       xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="WebApi.MapControl"
        d:DesignWidth="397.65" d:DesignHeight="401.194">
     <Grid x:Name="LayoutRoot" 
           Background="White" 
