--- a/BeerOverflowWindowsApp/MapControl.xaml
+++ b/BeerOverflowWindowsApp/MapControl.xaml
@@ -1,12 +1,16 @@
 ﻿<UserControl
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-       xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="BeerOverflowWindowsApp.MapControl"
-       d:DesignWidth="397.65" d:DesignHeight="401.194">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        mc:Ignorable="d" 
+        x:Class="BeerOverflowWindowsApp.MapControl" 
+        Height="1064.794" Width="707.25">
     <Grid x:Name="LayoutRoot" 
-          Background="White" 
-          MinWidth="100" 
-          MinHeight="100">
+         Background="White" 
+         MinWidth="100" 
+         MinHeight="100">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="20" />
@@ -21,41 +25,69 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <m:Map x:Name="Map" 
-               CredentialsProvider="D0D1Lgede4i57w5QzaRc~2au_CDaqppVK-NBTLRNVIw~AjGeU4vBGNoTvPi97hPUTuieFXffaeZNcqhN-5ViTRP7z0I8hImL_mkm8VF7igLz"
-               Center="54.684815,25.288464" 
-               ZoomLevel="13" 
-               Mode="AerialWithLabels"
-               Grid.ColumnSpan="3"
-               MouseDoubleClick="MapWithPushpins_MouseDoubleClick"/>
-        <Button x:Name="btnCurrentUserLocation"              
-                VerticalAlignment="Center" 
-                UseLayoutRounding="True" 
-                Grid.Row="2" Grid.Column="1"
-                HorizontalAlignment="Center" 
-                Width="150" Height="25"
-                Click="ShowCurrentLocation_Click">
+              CredentialsProvider="D0D1Lgede4i57w5QzaRc~2au_CDaqppVK-NBTLRNVIw~AjGeU4vBGNoTvPi97hPUTuieFXffaeZNcqhN-5ViTRP7z0I8hImL_mkm8VF7igLz"
+              Center="54.684815,25.288464" 
+              ZoomLevel="13" 
+              Mode="AerialWithLabels"
+              Grid.ColumnSpan="3">
+
+
+            <m:MapLayer>
+                <Border x:Name="Infobox" MinHeight="100" MaxHeight="200" Width="300" 
+                        Background="Black"
+                        Opacity="0.9" 
+                        BorderBrush="White" 
+                        BorderThickness="2" 
+                        CornerRadius="5"
+                        Visibility="Collapsed">
+                    <StackPanel>
+                        <Button Click="btnClose_Click" Name="btnClose" Tag="Close" Margin="5" Background="Black"
+                                HorizontalAlignment="Right" VerticalAlignment="Top" Visibility="Collapsed">
+                            <TextBlock>X</TextBlock>
+                        </Button>
+                        <Grid>
+                            <TextBlock x:Name="InfoboxTitle" Foreground="White" FontSize="12" Padding="5" Width="280"
+                                       TextWrapping="Wrap" Grid.Row="0" HorizontalAlignment="Left" />
+                        </Grid>
+                        <TextBlock x:Name="InfoboxDescription" Foreground="White" FontSize="10"    Padding="5" Width="265"
+                                   TextWrapping="Wrap" Height="Auto" Grid.Row="1" />
+                        <TextBox x:Name="InfoboxDescriptionEdit" Foreground="Black" FontSize="10"    Padding="5" Width="265"
+                                 TextWrapping="Wrap" Height="Auto" Grid.Row="1" Visibility="Collapsed" />
+                    </StackPanel>
+                </Border>
+            </m:MapLayer>
+
+
+        </m:Map>
+        <Button x:Name="ShowCurrentLocation"              
+               VerticalAlignment="Bottom" 
+               UseLayoutRounding="True" 
+               Grid.Row="2" Grid.Column="1"
+               HorizontalAlignment="Center" 
+               Width="150" Height="25"
+               Click="ShowCurrentLocation_Click" Margin="13.4,0,12.6,1.8">
             <TextBlock FontFamily="Microsoft Sans Serif" 
                        Grid.IsSharedSizeScope="True">
                 <Run Text="My Location"/></TextBlock>
         </Button>
-        <Button x:Name="btnChangeMapMode"              
-            VerticalAlignment="Center" 
-            UseLayoutRounding="True" 
-            Grid.Row="3" Grid.Column="1"
-            HorizontalAlignment="Center" 
-            Width="150" Height="25"
-            Click="ChangeMapMode_Click">
+        <Button x:Name="BtnChangeMapMode"              
+               VerticalAlignment="Center" 
+               UseLayoutRounding="True" 
+               Grid.Row="3" Grid.Column="1"
+               HorizontalAlignment="Center" 
+               Width="150" Height="25"
+               Click="ChangeMapMode_Click">
             <TextBlock FontFamily="Microsoft Sans Serif" 
                        Grid.IsSharedSizeScope="True">
                 <Run Text="Map Mode"/></TextBlock>
         </Button>
-        <Button x:Name="btnBackToMainWindow"              
-            VerticalAlignment="Center" 
-            UseLayoutRounding="True" 
-            Grid.Row="4" Grid.Column="1"
-            HorizontalAlignment="Center" 
-            Width="150" Height="25"
-            Click="BackToMainWindow_Click">
+        <Button x:Name="BtnBackToMainWindow"              
+               VerticalAlignment="Center" 
+               UseLayoutRounding="True" 
+               Grid.Row="4" Grid.Column="1"
+               HorizontalAlignment="Center" 
+               Width="150" Height="25"
+               Click="BackToMainWindow_Click">
             <TextBlock FontFamily="Microsoft Sans Serif" 
                        Grid.IsSharedSizeScope="True">
                 <Run Text="Back To Ratings"/></TextBlock>
